# tinkr_framework

./: AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  justfile
.agents/skills/documentation/: SKILL.md
.github/: release-please-config.json  release-please-manifest.json
.github/actions/setup/: action.yaml
.github/workflows/: qa.yaml  release.yaml
crates/demo/: Cargo.toml  buf.gen.yaml  buf.yaml  build.rs  config.schema.json  config.toml
crates/demo/examples/: combined.rs  config.rs  gen_schema.rs  kitchen_sink.rs  quickstart.rs
crates/demo/proto/: hello.proto
crates/demo/src/: config.rs  lib.rs
crates/demo/tests/: config_load.rs  config_toml.rs  integration.rs
crates/tinkr_config/: CHANGELOG.md  Cargo.toml
crates/tinkr_config/src/: __private.rs  base.rs  errors.rs  lib.rs  schema.rs  sources.rs
crates/tinkr_config/tests/: double_load.rs  env_override.rs  get_before_load.rs  global_load.rs  parse_merge.rs  schema_render.rs
crates/tinkr_config_macros/: CHANGELOG.md  Cargo.toml
crates/tinkr_config_macros/src/: lib.rs
crates/tinkr_framework/: CHANGELOG.md  Cargo.toml
crates/tinkr_framework/src/: bootstrap.rs  error.rs  errors.rs  health.rs  lib.rs  server.rs  utilities.rs
crates/tinkr_framework/tests/: bootstrap_double_init.rs  bootstrap_invalid_rust_log.rs  server_requires_config.rs  shutdown_timeout.rs
