[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
tinkr_framework = { path = "crates/tinkr_framework" }
tokio = "1"
thiserror = "2"
tonic = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
prost = "0.14"
axum = "0.8"
tower = "0.5"
http = "1"
hyper = "1"
hyper-util = "0.1"
http-body-util = "0.1"
