[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
# Single version for the whole workspace (crates set `version.workspace = true`);
# bumped by release-please via the extra-files updaters declared in
# .github/release-please-config.json.
version = "0.1.3"
edition = "2024"
readme = "README.md"
license = "MIT"
repository = "https://github.com/bakakaba/tinkr_framework"

[workspace.dependencies]
# Internal crates that appear in published manifests declare their
# `{ path, version }` dependency in the consuming crate's Cargo.toml —
# release-please bumps those version requirements via the extra-files
# updaters in .github/release-please-config.json, not here.
tinkr_framework = { path = "crates/tinkr_framework" }

tokio = "1"
thiserror = "2"
dotenvy = "0.15"
toml = "1"
syn = "3"
quote = "1"
proc-macro2 = "1"
proc-macro-crate = "3"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-stackdriver = "0.10"
ulid = "3"
serde = "1"
serde_json = "1"
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
axum = "0.8"
tower = "0.5"
http = "1"
socket2 = "0.6"
hyper = "1"
hyper-util = "0.1"
http-body-util = "0.1"
libc = "0.2"
