[package]
name = "demo"
edition.workspace = true
version = "0.1.1"
publish = false

[dependencies]
tinkr_framework = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net"] }
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
hyper = { workspace = true, features = ["client", "http1"] }
hyper-util = { workspace = true, features = ["client", "client-legacy", "http1", "tokio"] }
http-body-util = { workspace = true }
serde_json = { workspace = true }
