[package]
name = "demo"
edition.workspace = true
version.workspace = true
publish = false

[dependencies]
tinkr_framework = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net"] }
# The generated code in src/gen/ refers to these three crates by name, so
# they must be direct dependencies. Hand-written code uses the
# `tinkr_framework::tonic` re-export instead, and Cargo unifies these
# requirements with the framework's tonic version.
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
hyper = { workspace = true, features = ["client", "http1"] }
hyper-util = { workspace = true, features = ["client", "client-legacy", "http1", "tokio"] }
http-body-util = { workspace = true }
serde_json = { workspace = true }
