[package]
name = "tinkr_framework"
edition.workspace = true
version = "0.1.2"
description = "Framework for building APIs: multiplexed HTTP + gRPC serving on a single port, with bootstrap and logging."
readme.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/tinkr_framework"

[features]
default = ["grpc"]
grpc = ["dep:tonic", "dep:tower", "dep:http"]
gcp = ["dep:tracing-stackdriver"]

[dependencies]
tinkr_config = { path = "../tinkr_config", version = "0.1.2" }
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "net",
    "signal",
    "sync",
    "time",
] }
thiserror = { workspace = true }
socket2 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "env-filter",
    "fmt",
    "json",
] }
ulid = { workspace = true }
serde = { workspace = true, features = ["derive"] }

axum = { workspace = true, features = ["http2", "json"] }
tonic = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
http = { workspace = true, optional = true }
tracing-stackdriver = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }
libc = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
